[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/pot_texture.tres" type="Material" id=1]
[ext_resource path="res://scripts/LeafBlower.gd" type="Script" id=2]
[ext_resource path="res://assets/FieldGuide.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scripts/UI.gd" type="Script" id=4]
[ext_resource path="res://scripts/Plant.gd" type="Script" id=5]
[ext_resource path="res://assets/stem_texture.tres" type="Material" id=6]
[ext_resource path="res://watering_can.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/wood_texture.tres" type="Material" id=8]

[sub_resource type="Animation" id=7]
resource_name = "Yeet"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.8, 1.9, 2.4, 2.6 ),
"transitions": PoolRealArray( 0.659754, 0.366022, 1, 1, 0.615572, 0.5 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 40 ), Vector3( 0, 0, 15 ), Vector3( 0, 0, -25 ), Vector3( 0, 0, -25 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 1.5, 1.8, 1.9, 2.4 ),
"transitions": PoolRealArray( 0.482968, 0.366022, 0.435275, 1, 1, 0.554785 ),
"update": 0,
"values": [ Vector3( 0, 0, -0.722092 ), Vector3( 0, 0.5, -0.722 ), Vector3( -20, 6, 0 ), Vector3( -20, 10, 0 ), Vector3( 0, 10, -0.722 ), Vector3( 0, 0, -0.722 ) ]
}

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.113725, 0.054902, 0.0156863, 1 )

[sub_resource type="CylinderShape" id=3]
height = 1.5

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.180392, 0.0823529, 0.121569, 1 )

[sub_resource type="Environment" id=1]
ambient_light_color = Color( 1, 1, 1, 1 )
ambient_light_energy = 0.71
ambient_light_sky_contribution = 0.78
glow_enabled = true
glow_intensity = 6.0
glow_strength = 1.3

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;

uniform float vignette_intensity = 0.3;
uniform float vignette_opacity : hint_range(0.0, 1.0) = 0.1;
uniform vec4 vignette_rgb : hint_color = vec4(0.0, 0.0, 0.0, 1.0);

float vignette(vec2 uv){
	uv *= 1.0 - uv.xy;
	float vignette = uv.x * uv.y * 15.0;
	return pow(vignette, vignette_intensity * vignette_opacity);
}

void fragment(){
	vec4 color = texture(SCREEN_TEXTURE, SCREEN_UV);
	vec4 text = texture(TEXTURE, UV);
	
	text.rgba *= (vignette_rgb.rgba);
	text.rgba *= (1.0 - vignette(UV));
	
	COLOR = vec4((text.rgb)*color.rgb,text.a);
}"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )
shader_param/vignette_intensity = 0.3
shader_param/vignette_opacity = 0.1
shader_param/vignette_rgb = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=8]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=10]
resource_name = "fadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath("Control/GameOver:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 0.732043, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "fadeOut"
tracks/0/type = "value"
tracks/0/path = NodePath("Control/GameOver:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1.62451, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Spatial" type="Spatial"]
script = ExtResource( 2 )

[node name="PlantAndPot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.722092 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlantAndPot"]
anims/Yeet = SubResource( 7 )

[node name="Pot" type="StaticBody" parent="PlantAndPot"]

[node name="Top" type="CSGCylinder" parent="PlantAndPot/Pot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.500337, 0 )
radius = 1.05
height = 0.23
smooth_faces = false
material = ExtResource( 1 )

[node name="CSGCylinder3" type="CSGCylinder" parent="PlantAndPot/Pot/Top"]
operation = 2
radius = 0.84
height = 0.23
smooth_faces = false
material = ExtResource( 1 )

[node name="Base" type="CSGCylinder" parent="PlantAndPot/Pot"]
height = 2.0
smooth_faces = false
material = ExtResource( 1 )

[node name="CSGCylinder2" type="CSGCylinder" parent="PlantAndPot/Pot/Base"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0197359, 0 )
operation = 2
height = 3.75949
smooth_faces = false
material = ExtResource( 1 )

[node name="CSGCylinder" type="CSGCylinder" parent="PlantAndPot/Pot/Base/CSGCylinder2"]
transform = Transform( 1, 0, 0, 0, -4, 1.50996e-07, 0, -6.03983e-07, -1, 0, -1.5, 0 )
operation = 2
cone = true
smooth_faces = false
material = ExtResource( 1 )

[node name="Dirt" type="CSGCylinder" parent="PlantAndPot/Pot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.524016, 0 )
height = 0.002
material = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="PlantAndPot/Pot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.131275, 0 )
shape = SubResource( 3 )

[node name="Plant" type="Spatial" parent="PlantAndPot"]
script = ExtResource( 5 )

[node name="CSGCylinder" type="CSGCylinder" parent="PlantAndPot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.446544, 0 )
radius = 0.04
height = 0.2
material = ExtResource( 6 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( -0.996195, -0.0225575, 0.0841859, 0, 0.965926, 0.258819, -0.0871556, 0.257834, -0.96225, 1.00667, 3.56554, -7.3833 )
fov = 65.7

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.943014, -0.0932999, 0.319404, -0.310552, -0.591506, 0.744096, 0.119505, -0.800884, -0.586773, 11.0763, 14.3726, 10.0141 )
light_color = Color( 0.901961, 0.898039, 0.690196, 1 )
light_energy = 0.8
shadow_enabled = true

[node name="WateringCan" parent="." instance=ExtResource( 7 )]
transform = Transform( -0.485836, 0, -0.118165, 0, 0.5, 0, 0.118165, 0, -0.485836, 5.55839, -0.796686, -1.16222 )

[node name="Table" type="Spatial" parent="."]

[node name="Plank" type="CSGBox" parent="Table"]
transform = Transform( 0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 2.42778, -1.16151, 0.0296616 )
width = 22.8208
height = 0.408
depth = 1.226
material = ExtResource( 8 )

[node name="Plank4" type="CSGBox" parent="Table"]
transform = Transform( 0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 2.40045, -1.16151, 1.13003 )
width = 23.1
height = 0.408
depth = 1.226
material = ExtResource( 8 )

[node name="Plank5" type="CSGBox" parent="Table"]
transform = Transform( 0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 7.02737, -1.16151, 2.20207 )
visible = false
width = 33.287
height = 0.408
depth = 1.226
material = ExtResource( 8 )

[node name="Plank2" type="CSGBox" parent="Table"]
transform = Transform( 0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 2.52464, -1.16151, -1.0302 )
width = 22.75
height = 0.408
depth = 1.226
material = ExtResource( 8 )

[node name="Plank3" type="CSGBox" parent="Table"]
transform = Transform( 0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 2.67088, -1.16151, -2.1329 )
width = 22.5404
height = 0.408
depth = 1.226
material = ExtResource( 8 )

[node name="Leg" type="CSGBox" parent="Table"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.54857, -3.86434, -0.521948 )
height = 5.0
depth = 2.7
material = SubResource( 6 )

[node name="Leg2" type="CSGBox" parent="Table"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.81349, -3.86434, -0.521948 )
height = 5.0
depth = 2.7
material = SubResource( 6 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="OmniLight" type="OmniLight" parent="WorldEnvironment"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.74257, 5.71165, -10.3498 )
visible = false
omni_range = 12.803
omni_attenuation = 1.68179

[node name="OmniLight2" type="SpotLight" parent="WorldEnvironment"]
transform = Transform( -0.988688, 0, -0.149984, 0, 1, 0, 0.149984, 0, -0.988688, 2.5744, 1.86389, -8.51376 )
visible = false
spot_range = 11.079

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Vignette" type="ColorRect" parent="Control"]
material = SubResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="GameOver" type="Label" parent="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 8 )
text = "The plant died.

Press enter to reset."
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/GameOver"]
root_node = NodePath("../../..")
anims/fadeIn = SubResource( 10 )
anims/fadeOut = SubResource( 9 )
